# steel_weld_defects_detection

./: .gitignore  Review II Report.docx  check_device.py  gradcam_run.py  gradcam_yolo_notebook.ipynb  lf_yolo.py  lf_yolo_backbone.py  lf_yolo_custom.yaml  main.py  pyproject.toml  requirements.txt  test_forward.py  test_lf_yolo.ipynb  train.py  train_custom.py  train_log.txt  weld_defects.yaml
github-1/: dataset_cleaner.py  validation_split.py  weld_defects.yaml
github-1/cleaned_dataset/labels/: air-hole1-13.txt  air-hole1-24.txt  air-hole1-33.txt  air-hole1-38.txt  air-hole1-41.txt  air-hole2-15.txt  air-hole2-31.txt  air-hole2-32.txt  air-hole2-34.txt  air-hole2-36.txt  bite-edge2-06.txt  bite-edge2-07.txt  bite-edge2-12.txt  bite-edge2-13.txt  bite-edge2-20.txt  bite-edge2-25.txt  broken-arc1-14.txt  broken-arc1-21.txt  broken-arc1-23.txt  broken-arc1-32.txt  broken-arc1-60.txt  broken-arc1-61.txt  broken-arc1-72.txt  broken-arc1-77.txt  broken-arc1-78.txt  broken-arc2-002.txt  broken-arc2-005.txt  broken-arc2-021.txt  broken-arc2-033.txt  broken-arc2-034.txt  broken-arc2-040.txt  broken-arc2-041.txt  broken-arc2-051.txt  broken-arc2-062.txt  broken-arc2-063.txt  broken-arc2-074.txt  broken-arc2-081.txt  broken-arc2-084.txt  broken-arc2-087.txt  broken-arc2-089.txt  (+93 more)
runs/detect/lf_yolo_weld_training/: args.yaml
weld_defects/: weld_defects.yaml
weld_defects/labels/: train.cache  val.cache
weld_defects/labels/train/: air-hole1-14.txt  air-hole1-18.txt  air-hole1-20.txt  air-hole1-23.txt  air-hole1-25.txt  air-hole1-27.txt  (+399 more)
xai/: gradcam_utils.py
(+236 files in other folders)
