[project]
name = "weld-defects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.2.0",
    "wandb>=0.22.3",
]
